we are now recording to video

--- a/AprilTags.ipynb
+++ b/AprilTags.ipynb
@@ -25,7 +25,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 891,
+      "execution_count": 2,
       "metadata": {
         "id": "BJmsnu11-IZB"
       },
@@ -86,23 +86,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 115,
+      "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "8MfWWPyak75k",
-        "outputId": "bbc1d2f9-7fb2-4760-f7c1-d0932a684b9c"
+        "id": "8MfWWPyak75k"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "No mapped check-point detected\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "try:\n",
         "  checkPointInfo = {10 : \"Velocity = 10 \\n Checkpoint #1\",\n",
@@ -125,7 +113,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 967,
+      "execution_count": 20,
       "metadata": {
         "id": "HgGa4SBW1h4G"
       },
@@ -383,35 +371,56 @@
       "metadata": {
         "id": "B0xFo5wtPUTf"
       },
-      "execution_count": 968,
+      "execution_count": 21,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "i = 0\n",
-        "print('start point', objs[i].start)\n",
         "\n",
+        "#print('start point', objs[i].start)\n",
+        "\n",
+        "vid = cv2.VideoWriter('/content/drive/MyDrive/(1) UCSD/(6) Fall 2022/MAE-148/AprilTags/output.avi',\n",
+        "                      cv2.VideoWriter_fourcc('M','J','P','G'), 20, (1920,1080))\n",
+        "i = 0\n",
         "while i < len(objs)+1:\n",
-        "  objs[i].draw_start_end()\n",
-        "  runoff = objs[i].getMotion(1, 0.5)\n",
+        "  runoff = objs[i].getMotion(0.5, 0.05)\n",
         "  if runoff == 'a':\n",
         "    break\n",
         "  if runoff != None:\n",
         "    i +=1\n",
         "  \n",
-        "  print('real position', objs[i].realPos)\n",
-        "  print(objs[i].linearPos)\n",
-        "  print(objs[i].linearExtent)\n",
-        "  cv2_imshow(track)\n",
-        "  time.sleep(0.1)\n",
+        "  #print('real position', objs[i].realPos)\n",
+        "  #print(objs[i].linearPos)\n",
+        "  #print(objs[i].linearExtent)\n",
+        "  #cv2_imshow(track)\n",
+        "  vid.write(track)\n",
+        "  time.sleep(0.5)\n",
         "\n"
       ],
       "metadata": {
-        "id": "-j7xlT2C3fAj"
+        "id": "-j7xlT2C3fAj",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f9736923-875e-40f0-f7e8-1b3e7f2ba276"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "traversing forward\n",
+            "traversing forward\n",
+            "traversing forward\n",
+            "traversing forward\n",
+            "traversing forward\n",
+            "traversing forward\n",
+            "traversing forward\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -428,7 +437,7 @@
       "collapsed_sections": [],
       "provenance": [],
       "mount_file_id": "1DcMqr50LyHVgQOcX4SW5jPv8t7l9MdcM",
-      "authorship_tag": "ABX9TyPgy+f0tmRIbKBjJOH8vmFv",
+      "authorship_tag": "ABX9TyOhhg2Wp8gTiNeD2ZAnAGrt",
       "include_colab_link": true
     },
     "kernelspec": {
