Created virtual camera, and linked up the vCam to the detector, and velocity generator classes. Still some bugs, but things are starting to come together

--- a/AprilTags.ipynb
+++ b/AprilTags.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/maarongross/apriltag-imgs/blob/master/AprilTags.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/maarongross/148-final-project/blob/master/AprilTags.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -20,12 +20,13 @@
       "source": [
         "from pip._internal import main as pipmain\n",
         "pipmain(['install', 'apriltag'])\n",
-        "pipmain(['install', 'dxfgrabber'])"
+        "pipmain(['install', 'dxfgrabber'])\n",
+        "pipmain(['install', 'pyvesc'])"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 443,
       "metadata": {
         "id": "BJmsnu11-IZB"
       },
@@ -36,13 +37,17 @@
         "import apriltag\n",
         "import dxfgrabber\n",
         "import numpy as np\n",
-        "import time"
+        "import time\n",
+        "import os"
       ]
     },
     {
       "cell_type": "markdown",
       "source": [
-        "April Tag Detector Demonstration"
+        "April Tag Detector Demonstration\n",
+        "*   This code is a small demonstration of the provided apriltag samplecode\n",
+        "*   Second block is a demonstration of how individual tags can be mapped to velocity information\n",
+        "\n"
       ],
       "metadata": {
         "id": "sndm3WlEDucG"
@@ -100,21 +105,9 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "8MfWWPyak75k",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "35f7d296-c6ed-4d7e-e9ee-5a4774eeaa8c"
+        "id": "8MfWWPyak75k"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "No mapped check-point detected\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "#Simple dict to map tags to values\n",
         "try:\n",
@@ -130,7 +123,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Machinery to Run Motion Allong a Polyline\n",
+        "Machinery to Run Motion Allong a Polyline, made up of two classes\n",
+        "*   polyline contains methods to build up a polyline made up of individual line/arc objects. Also includes methods to carry out velocity commands\n",
+        "*   obj class contains information about the motion shape and various other parameters\n",
+        "\n",
+        "\n",
         "\n",
         "\n"
       ],
@@ -140,15 +137,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 444,
       "metadata": {
         "id": "HgGa4SBW1h4G"
       },
       "outputs": [],
       "source": [
         "# Loading track map and resizing\n",
-        "track = cv2.imread('/content/drive/MyDrive/(1) UCSD/(6) Fall 2022/MAE-148/AprilTags/track backround.png')\n",
-        "track = cv2.resize(track,(1920,1080), interpolation = cv2.INTER_AREA)\n",
+        "#track = cv2.imread('/content/drive/MyDrive/(1) UCSD/(6) Fall 2022/MAE-148/AprilTags/track backround.png')\n",
+        "#track = cv2.resize(track,(1920,1080), interpolation = cv2.INTER_AREA)\n",
         "\n",
         "# Image Zero-Zero\n",
         "(zX, zY) = (int(1920/2), int(1080/2))\n",
@@ -160,6 +157,7 @@
         "  object_index = 0\n",
         "  track_image = None\n",
         "  image_scaler = None\n",
+        "  hasLooped = False\n",
         "  def __init__(self, points, track_image, image_scaler):\n",
         "    self.track_image = track_image\n",
         "    self.image_scaler = image_scaler\n",
@@ -209,13 +207,26 @@
         "      if runoff != None:\n",
         "        if self.object_index+1 >= len(self.objects):\n",
         "          self.object_index = 0\n",
+        "          self.hasLooped = True\n",
         "        else:\n",
         "          self.object_index +=1\n",
+        "          self.hasLooped = False\n",
         "  def getPolyLength(self):\n",
         "    sum = 0\n",
         "    for p in self.objects:\n",
         "      sum += self.trans_img2dist_float(p.linearExtent)\n",
         "    return sum\n",
+        "  def getPolyPosition(self):\n",
+        "    i = 0\n",
+        "    sum = 0\n",
+        "    if self.object_index > 0:\n",
+        "      while i <= self.object_index-1:\n",
+        "        sum += self.trans_img2dist_float(self.objects[i].linearExtent)\n",
+        "        i += 1\n",
+        "      return sum + self.trans_img2dist_float(self.objects[self.object_index].linearPos)\n",
+        "    else:\n",
+        "      return self.trans_img2dist_float(self.objects[self.object_index].linearPos)\n",
+        "\n",
         "  def trans_dist2img(self, x):\n",
         "    return(int(x*self.image_scaler))\n",
         "  def trans_dist2img_float(self, x):\n",
@@ -227,7 +238,6 @@
         "    scaler = 1/self.image_scaler\n",
         "    return(float(x*scaler))\n",
         " \n",
-        "\n",
         "# Definition of the object class, this stores individual segements of a polyline\n",
         "class obj():\n",
         "  track_image = None\n",
@@ -445,14 +455,23 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Using both classes requires an image to draw motion allong, and the various information required to describe motion allong the track. "
+      ],
+      "metadata": {
+        "id": "FbhyvNvJr6-Q"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 576,
       "metadata": {
         "id": "B0xFo5wtPUTf",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "034bf34e-7f07-4b5a-cd7c-b8f419eb18e4"
+        "outputId": "95682012-a5e7-42cc-d9fe-3bd1f1ecd69b"
       },
       "outputs": [
         {
@@ -467,9 +486,12 @@
         "# Build up The Polyline\n",
         "\n",
         "#Read in and resize the image for the track backround\n",
-        "track = cv2.imread('/content/drive/MyDrive/(1) UCSD/(6) Fall 2022/MAE-148/AprilTags/track backround.png')\n",
-        "track = cv2.resize(track,(1920,1080), interpolation = cv2.INTER_AREA)\n",
-        "\n",
+        "try:\n",
+        "  track = cv2.imread('/content/drive/MyDrive/(1) UCSD/(6) Fall 2022/MAE-148/AprilTags/track backround.png')\n",
+        "  track = cv2.resize(track,(1920,1080), interpolation = cv2.INTER_AREA)\n",
+        "except: \n",
+        "  print(\"ERROR: Failed to load track backround\")\n",
+        "  \n",
         "#Data to generate objects\n",
         "\"\"\"\n",
         "  start point         object type       color        radius point       circle parameter 1, circle parameter 2       \n",
@@ -521,9 +543,11 @@
         "  velocity  =   None\n",
         "  position  =   None\n",
         "\n",
+        "  tagID     =   None\n",
+        "\n",
         "  next      =   None\n",
         "\n",
-        "  def __init__(self, Velocity_curve_type, velocity_min, velocity_max, motion_distance):\n",
+        "  def __init__(self, tagID, Velocity_curve_type, velocity_min, velocity_max, motion_distance):\n",
         "    self.curveType = Velocity_curve_type\n",
         "    self.velMin = velocity_min\n",
         "    self.velMax = velocity_max\n",
@@ -531,6 +555,7 @@
         "\n",
         "    self.position = 0\n",
         "    self.slope = 0\n",
+        "    self.tagID = tagID\n",
         "\n",
         "  def getVel(self, time):\n",
         "    \"\"\"\n",
@@ -576,16 +601,16 @@
         "    else:\n",
         "      try:\n",
         "        self.position = 0\n",
-        "        return [next.velocity, 1] \n",
+        "        return [self.velMin,1] \n",
         "      except:\n",
-        "        print(\"Failed to hand over velocity to next object\")\n",
+        "        print(\"ERROR: Failed to hand over velocity to next object \\n in getVel method in velCurve Class\")\n",
         "        return [self.velMin, 1]\n",
         "      #Need to accomodate for handing off between velocity curves"
       ],
       "metadata": {
         "id": "4osQL68IQiM1"
       },
-      "execution_count": null,
+      "execution_count": 577,
       "outputs": []
     },
     {
@@ -596,15 +621,18 @@
         "  image       =   None\n",
         "  results     =   None\n",
         "  tagID       =   list()\n",
+        "                      # curve_type minVel maxVel linear Distance \n",
+        "  nodes = {1 : velCurve(1, \"constant\", 0.1, 1.5, 4.090),\n",
+        "           2 : velCurve(2, \"constant\", 0.1, 1.0, 4.0326),\n",
+        "           3 : velCurve(3, \"constant\", 0.1, 1.5, 1.106),\n",
+        "           4 : velCurve(4, \"constant\", 0.1, 1.0, 0.647),\n",
+        "           5 : velCurve(5, \"constant\", 0.1, 1.5, 1.875),\n",
+        "           6 : velCurve(6, \"constant\", 0.1, 1.0, 1.138),\n",
+        "           7 : velCurve(7, \"constant\", 0.1, 1.5, 1.131),\n",
+        "           8 : velCurve(8, \"constant\", 0.1, 1.0, 0.864),}\n",
         "  \n",
-        "  nodes = {1 : velCurve(\"constant\", 0.5, 1, 5),\n",
-        "           2 : velCurve(\"constant\", 0.5, 2, 5),\n",
-        "           3 : velCurve(\"constant\", 0.5, 3, 5)}\n",
-        "  \n",
-        "  def __init__(self, detector, image):\n",
+        "  def __init__(self, detector):\n",
         "    self.detector = detector\n",
-        "    self.image = image\n",
-        "\n",
         "  def setImage(self, img):\n",
         "    self.image = img\n",
         "  def readImage(self):\n",
@@ -612,27 +640,41 @@
         "    self.results = detector.detect(self.image)\n",
         "    for r in self.results:\n",
         "      self.tagID.append(int(r.tag_id))\n",
-        "    \n",
         "    try:\n",
-        "      return self.nodes[self.tagID[len(tagID)-1]]\n",
+        "      return self.nodes[self.tagID[len(self.tagID)-1]]\n",
         "    except:\n",
-        "      print(\"Error detecting node\")\n",
+        "      print(\"ERROR: failed to detect node \\n in read image method in tagReader class\")\n",
         "      return None\n",
         "  def annotateImage(self):\n",
         "    img = cv2.cvtColor(self.image, cv2.COLOR_GRAY2RGB) # Converting the origonal image back to color, so that we can draw bounding boxes and stuff\n",
+        "    \n",
+        "    if self.results == None:\n",
+        "        self.readImage()\n",
+        "    \n",
         "    #loop to draw bounding boxes, and mark centers\n",
-        "    for r in result:\n",
+        "    for r in self.results:\n",
         "      # Setting corners\n",
         "      (A,B,C,D) = r.corners \n",
         "      corner_B = (int(B[0]), int(B[1]))\n",
         "      corner_C = (int(C[0]), int(C[1]))\n",
         "      corner_D = (int(D[0]), int(D[1]))\n",
         "      corner_A = (int(A[0]), int(A[1]))\n",
+        "      \n",
+        "      #print(\"a\", corner_A, \"red\")\n",
+        "      #print(\"b\", corner_B, \"green\")\n",
+        "      #print(\"c\", corner_C, \"blue\")\n",
+        "      #print(\"d\", corner_D, \"purple\")\n",
+        "\n",
+        "      cv2.circle(img,corner_A, 5, (0, 0, 255), -1)\n",
+        "      cv2.circle(img,corner_B, 5, (0, 255, 0), -1)\n",
+        "      cv2.circle(img,corner_C, 5, (255, 0, 0), -1)\n",
+        "      cv2.circle(img,corner_D, 5, (255, 0, 255), -1)\n",
+        "\n",
         "      # Drawing lines between corners\n",
-        "      cv2.line(img, corner_A, corner_B, (0,255,0), 5)\n",
-        "      cv2.line(img, corner_B, corner_C, (0,255,0), 5)\n",
-        "      cv2.line(img, corner_C, corner_D, (0,255,0), 5)\n",
-        "      cv2.line(img, corner_D, corner_A, (0,255,0), 5)\n",
+        "      #cv2.line(img, corner_A, corner_B, (0,255,0), 5)\n",
+        "      #cv2.line(img, corner_B, corner_C, (0,255,0), 5)\n",
+        "      #cv2.line(img, corner_C, corner_D, (0,255,0), 5)\n",
+        "      #cv2.line(img, corner_D, corner_A, (0,255,0), 5)\n",
         "\n",
         "      # Draw a circle in the center of each tag detected\n",
         "      (cX,cY) = (int(r.center[0]), int(r.center[1]))\n",
@@ -642,62 +684,106 @@
         "      tagFamily = r.tag_family.decode(\"utf-8\")\n",
         "      tagID = str(r.tag_id)\n",
         "      print(tagID)\n",
-        "      cv2.putText(img, \"tagID: \" + tagID, (corner_A[0]+50, corner_A[1] - 30),\n",
-        "                  cv2.FONT_HERSHEY_SIMPLEX, 2, (0,255,0), 10)\n",
+        "      cv2.putText(img, \"tagID: \" + tagID, (corner_A[0]+20, cY),\n",
+        "                  cv2.FONT_HERSHEY_SIMPLEX, 2, (0,255,0), 5)\n",
         "      \n",
         "      print(\"[INFO] tag ID: {}\".format(tagID))\n",
-        "      return(img)"
+        "      #return img\n",
+        "      return cv2.resize(img[int(A[1]):int(D[1]),int(A[0]):int(B[0])],(200,200), interpolation = cv2.INTER_AREA)"
       ],
       "metadata": {
         "id": "sYAP2n6vv1tV"
       },
-      "execution_count": null,
+      "execution_count": 570,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "#Reading in the file, converting it to a black and white img, and resizing\n",
-        "img = cv2.imread('/content/drive/MyDrive/(1) UCSD/(6) Fall 2022/MAE-148/AprilTags/apriltag-imgs-master/apriltag-imgs-master/tag16h5/tag16_05_00003.png')\n",
-        "img = cv2.cvtColor(img, cv2.COLOR_BGR2GRAY)\n",
-        "img = cv2.resize(img,(4208,3120), interpolation = cv2.INTER_AREA)\n",
-        "\n",
+        "class cameraSim():\n",
+        "  dirPath = None\n",
+        "  nodeCount = None\n",
+        "  imgs = []\n",
+        "  nodes = {}\n",
+        "  pl = None\n",
+        "  lengs = []\n",
+        "  def __init__(self, render_directory, running_polyline):\n",
+        "    self.pl = running_polyline\n",
+        "    self.dirPath = render_directory\n",
+        "    self.loadImgs()\n",
+        "    self.buildNodes()\n",
+        "  def loadImgs(self):\n",
+        "    count = 0\n",
+        "    for path in os.listdir(dirPath):\n",
+        "      if os.path.isfile(os.path.join(dirPath, path)):\n",
+        "        self.nodes[count] = cv2.cvtColor(cv2.imread(os.path.join(dirPath, path)), cv2.COLOR_BGR2GRAY) \n",
+        "        count += 1\n",
+        "  def buildNodes(self):\n",
+        "    i = 0\n",
+        "    sum = 0\n",
+        "    for node in self.pl.objects:\n",
+        "      self.lengs.append(sum + node.trans_img2dist_float(node.linearExtent))\n",
+        "      sum += node.trans_img2dist_float(node.linearExtent)\n",
+        "      i += 1\n",
+        "  def getImg(self):\n",
+        "    nodeLoc = 0\n",
+        "    pos = self.pl.getPolyPosition()\n",
+        "    #print(\"Position: \", pos)\n",
+        "    i = 0\n",
+        "    while pos > self.lengs[i]:\n",
+        "      nodeLoc = i\n",
+        "      if i < len(self.lengs)-1:\n",
+        "        i += 1\n",
+        "      elif i > len(self.lengs)-1:\n",
+        "        i = 0\n",
+        "      else:\n",
+        "        print(\"ERROR: Something unexpexted happened in the getImg method in camSim class\")\n",
+        "        break\n",
+        "    return self.nodes[i]"
+      ],
+      "metadata": {
+        "id": "09dXkN9gsWET"
+      },
+      "execution_count": 571,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dirPath = '/content/drive/MyDrive/(1) UCSD/(6) Fall 2022/MAE-148/AprilTags/Track-Tags-Renders 16h5 1-8'\n",
+        "cam = cameraSim(dirPath, track_contour)"
+      ],
+      "metadata": {
+        "id": "Vq0iW6A6w-Zd"
+      },
+      "execution_count": 578,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "apriltag.DetectorOptions() # Setting up the detector options object\n",
         "options = apriltag.DetectorOptions(families=\"tag16h5\",quad_decimate=1)\n",
         "detector = apriltag.Detector(options) # Instantiating the detector, with the detector options\n",
-        "\n",
-        "reader = tagReader(detector, img)"
+        "reader = tagReader(detector)"
       ],
       "metadata": {
         "id": "Jgkh8JPkYZhW"
       },
-      "execution_count": null,
+      "execution_count": 579,
       "outputs": []
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "curve = reader.readImage()\n",
-        "\n",
-        "print(curve.getVel(1))\n"
+        "Motion Simulation Playground\n",
+        "*   Read in image\n",
+        "*   Setup video-writer\n",
+        "\n"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "HEdlU_fNXl0q",
-        "outputId": "c5a6c55d-8f9c-4bbc-f81b-da1c066bd52f"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "[3, 0]\n"
-          ]
-        }
-      ]
+        "id": "oY_cVCxPqSWL"
+      }
     },
     {
       "cell_type": "code",
@@ -710,14 +796,31 @@
         "#track = cv2.imread('/content/drive/MyDrive/(1) UCSD/(6) Fall 2022/MAE-148/AprilTags/track backround.png')\n",
         "#track = cv2.resize(track,(1920,1080), interpolation = cv2.INTER_AREA)\n",
         "\n",
-        "# vid = cv2.VideoWriter('/content/drive/MyDrive/(1) UCSD/(6) Fall 2022/MAE-148/AprilTags/output.avi',\n",
-        "#                       cv2.VideoWriter_fourcc('M','J','P','G'), 20, (1920,1080))\n",
+        "vid = cv2.VideoWriter('/content/drive/MyDrive/(1) UCSD/(6) Fall 2022/MAE-148/AprilTags/output.avi',\n",
+        "                      cv2.VideoWriter_fourcc('M','J','P','G'), 20, (1920,1080))\n",
+        "velocity = 0.1 # (m/s) initial velocity\n",
+        "f = 1/20 # (seconds)\n",
+        "while track_contour.hasLooped == False:\n",
+        "  track_contour.getMotion(velocity, f)\n",
+        "  reader.setImage(cam.getImg())\n",
+        "  #print(\"reader return: \", reader.readImage())\n",
         "\n",
-        "while False:\n",
-        "  track_contour.getMotion(1, 1/20)\n",
-        "# vid.write(track)\n",
-        "  time.sleep(0.25)    \n",
-        "  cv2_imshow(track_contour.track_image)\n",
+        "  velGen = reader.readImage()\n",
+        "  velocity = velGen.getVel(f)[0]\n",
+        "\n",
+        "  print(velGen.tagID)\n",
+        "  print(\"Velocity: \", velGen.getVel(f)[0])\n",
+        "  \n",
+        "  img = track_contour.track_image\n",
+        "  try:  \n",
+        "    img[0:200,0:200] = reader.annotateImage()\n",
+        "  except:\n",
+        "    img[0:400,0:200] = 0\n",
+        "  #cv2_imshow(img)\n",
+        "  \n",
+        "  vid.write(track_contour.track_image)\n",
+        "  time.sleep(0.5)\n",
+        "\n",
         "\n"
       ]
     }
@@ -726,7 +829,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1DcMqr50LyHVgQOcX4SW5jPv8t7l9MdcM",
-      "authorship_tag": "ABX9TyPw14khQahcjM5Zlmt2p+ob",
+      "authorship_tag": "ABX9TyPadlyF0j7Tkf1wlacX6GR6",
       "include_colab_link": true
     },
     "kernelspec": {
